--- a/app.yaml
+++ b/app.yaml
@@ -4,7 +4,7 @@ handlers:
   - url: /styles
     static_dir: styles
 
-  - url: /images/(.*\.(gif|png|jpg))
+  - url: https://storage.cloud.google.com/my-project-nurrapi-385700.appspot.com/fotodiri%20(2).jpeg?authuser=2
     static_files: images/\1
     upload: images/(.*\.(gif|png|jpg))
 
