--- a/app.yaml
+++ b/app.yaml
@@ -6,7 +6,7 @@ handlers:
 
   - url: https://storage.cloud.google.com/my-project-nurrapi-385700.appspot.com/fotodiri%20(2).jpeg?authuser=2
     static_files: images/\1
-    upload: images/(.*\.(gif|png|jpg))
+    upload: https://storage.cloud.google.com/my-project-nurrapi-385700.appspot.com/fotodiri%20(2).jpeg?authuser=2
 
   - url: /.*
     script: index.php
