--- a/app.yaml
+++ b/app.yaml
@@ -4,9 +4,9 @@ handlers:
   - url: /styles
     static_dir: styles
 
-  - url: gs://my-project-nurrapi-385700.appspot.com/fotodiri (2).jpeg
+  - url: /images/(.*\.(https://storage.cloud.google.com/my-project-nurrapi-385700.appspot.com/fotodiri%20(2).jpeg?authuser=2))
     static_files: images/\1
-    upload: gs://my-project-nurrapi-385700.appspot.com/fotodiri (2).jpeg
+    upload: /images/(.*\.(https://storage.cloud.google.com/my-project-nurrapi-385700.appspot.com/fotodiri%20(2).jpeg?authuser=2))
 
-  - url: gs://my-project-nurrapi-385700.appspot.com/fotodiri (2).jpeg
+  - url: /.*
     script: index.php
